--- a/src/app/componentes/auth/auth.component.css
+++ b/src/app/componentes/auth/auth.component.css
@@ -77,6 +77,12 @@ body.no-scroll {
     text-decoration: none;
 }
 
+.enlaces-admin {
+    color: yellow;
+    font-size: 16px;
+    text-decoration: none;
+}
+
 .button-iniciar-sesion {
     padding: 8px 12px 8px 12px;
     background: none;
@@ -99,7 +105,6 @@ body.no-scroll {
     padding: 8px 12px 8px 12px;
     background: none;
     font-size: 14px;
-    margin-right: 30px;
     color: yellow;
     font-weight: 700;
     border: 2px solid white;
@@ -145,13 +150,13 @@ body.no-scroll {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.9);
 }
 
-ul {
+.ul {
     list-style: none;
     display: flex;
     gap: 20px;
 }
 
-ul li a {
+.ul li a {
     color: white;
     text-decoration: none;
 }
@@ -467,19 +472,6 @@ header {
         font-size: 14px;
     }
 
-    .button-cerrar-sesion {
-        padding: 8px 12px 8px 12px;
-        font-size: 13px;
-        margin-right: 24px;
-    }
-
-    .button-admin-panel {
-        padding: 8px 12px 8px 12px;
-        font-size: 13px;
-        margin-right: 20px;
-        font-weight: 500;
-    }
-
 }
 
 /* Para pantallas menores a 768px (móviles) */
@@ -576,28 +568,9 @@ header {
         max-height: 60px;
     }
 
-    .button-iniciar-sesion {
-        padding: 6px 10px 6px 10px;
-        font-size: 11px;
-        margin-right: 20px;
-    }
-
     .user {
         margin-right: 18px;
         font-size: 12px;
-    }
-
-    .button-cerrar-sesion {
-        padding: 6px 10px 6px 10px;
-        font-size: 11px;
-        margin-right: 18px;
-    }
-
-    .button-admin-panel {
-        padding: 6px 10px 6px 10px;
-        font-size: 11px;
-        margin-right: 18px;
-        font-weight: 500;
     }
 
 }
@@ -697,28 +670,9 @@ header {
         max-height: 50px;
     }
 
-    .button-iniciar-sesion {
-        padding: 6px 8px 6px 8px;
-        font-size: 10px;
-        margin-right: 16px;
-    }
-
     .user {
         margin-right: 12px;
         font-size: 12px;
-    }
-
-    .button-cerrar-sesion {
-        padding: 6px 8px 6px 8px;
-        font-size: 10px;
-        margin-right: 14px;
-    }
-
-    .button-admin-panel {
-        padding: 6px 8px 6px 8px;
-        font-size: 10px;
-        margin-right: 6px;
-        font-weight: 400;
     }
 
 }
@@ -836,23 +790,16 @@ header {
 /* Tus estilos para .button-iniciar-sesion, .user-sesion, .user, .button-cerrar-sesion, .button-admin-panel */
 /* Asegúrate que los márgenes derechos de estos botones sean consistentes o se ajusten */
 
-.user-sesion { display: flex; align-items: center; }
-.user { margin-right: 10px; font-size: 16px; font-weight: 700; color: white; }
+.user { margin-right: 10px; font-size: 18px; font-weight: 700; color: white; }
 .user a { color: white; text-decoration: none; }
 .user a:hover { text-decoration: underline; }
-.button-cerrar-sesion {
-    padding: 8px 12px; background: none; font-size: 14px;
-    font-weight: 700; color: red; border: 2px solid red; cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.button-cerrar-sesion:hover { transform: translateY(-5px); box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.9); }
-.button-admin-panel {
-    padding: 8px 12px; background: none; font-size: 14px;
-    color: yellow; font-weight: 700; border: 2px solid white; cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.button-admin-panel:hover { transform: translateY(-5px); box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.9); }
 
+.li-cerrar-sesion {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
 
 /* === ICONO DE HAMBURGUESA (AÑADIR ESTO) === */
 .burger-menu-icon {
@@ -935,22 +882,28 @@ header {
     color: white;
     border: 1px solid white;
     background-color: transparent;
-    border-radius: 4px;
 }
-/* .mobile-user-info .user { color: white; font-weight: bold; } */
+
+.mobile-user-info {
+    display: inline-flex;
+    color: white;
+    align-items: center;
+    margin-right: 10px;
+}
 
 .user-admin-button {
     display: flex;
     flex-direction: row;
     text-align: center;
     align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+    justify-content: center;
 }
 
 .mobile-menu-nav ul {
+    display: flex;
+    flex-direction: column;
     list-style: none;
-    padding: 20px 0; /* Espacio arriba y abajo de la lista */
+    padding: 16px 0; /* Espacio arriba y abajo de la lista */
     margin: 0;
 }
 
@@ -961,7 +914,6 @@ header {
 .mobile-menu-nav li.mobile-user-name-display a {
     font-weight: bold;
     color: #e0e0e0; /* Un color destacado pero no igual a los enlaces principales */
-    /* background-color: rgba(255,255,255,0.05); */
 }
 
 
@@ -983,7 +935,7 @@ header {
 .mobile-menu-nav hr {
     border: none;
     border-top: 1px solid rgba(255,255,255,0.1);
-    margin: 15px 20px; /* Margen horizontal para que no ocupe todo el ancho */
+    margin: 12px 16px; /* Margen horizontal para que no ocupe todo el ancho */
 }
 
 
