--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -221,7 +221,7 @@ body, app-footer {
     align-items: flex-start;
     justify-content: center;
     text-align: center;
-    background-image: url("../assets/fondosobre.jpg");
+    background-image: url("../assets/fondosobre.webp");
     background-size: cover;
     background-position: center calc(100% + var(--scroll-y) * 0.7px);
     will-change: transform;
@@ -283,13 +283,13 @@ body, app-footer {
 }
 
 .img-tecnologia1 {
-    background-image: url("../assets/fondosobre.jpg");
+    background-image: url("../assets/fondosobre.webp");
     background-position: center left;
     will-change: transform;
 }
 
 .img-tecnologia2 {
-    background-image: url("../assets/fondosobre.jpg");
+    background-image: url("../assets/fondosobre.webp");
     background-position: center right;
     will-change: transform;
 }
@@ -329,7 +329,7 @@ body, app-footer {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    background-image: url("../assets/fondosobre.jpg");
+    background-image: url("../assets/fondosobre.webp");
     background-size: cover;
     background-position: center calc(100% + var(--scroll-y) * 0.7px);
     will-change: transform;
@@ -348,7 +348,7 @@ body, app-footer {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    background-image: url("../assets/fondosobre.jpg");
+    background-image: url("../assets/fondosobre.webp");
     background-size: cover;
     background-position: center calc(100% + var(--scroll-y) * 0.9px);
     will-change: transform;
@@ -556,7 +556,7 @@ svg {
 /* Media Queries */
 
 /* Para pantallas menores a 1024px (tablets y móviles grandes) */
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
 
     .form-container {
         padding: 40px;
@@ -783,10 +783,10 @@ svg {
         font-size: 1.2em;
     }
     
-}
+} */
 
 /* Para pantallas menores a 768px (móviles) */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
 
     .form-container {
         padding: 35px;
@@ -864,10 +864,6 @@ svg {
     
     .nav-enlaces {
         margin-left: 20px;
-    }
-
-    ul {
-        gap: 18px;
     }
 
     .img-logo {
@@ -962,10 +958,10 @@ svg {
         font-size: 1em;
     }
 
-}
+} */
 
 /* Para pantallas muy pequeñas (menores a 480px) */
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
 
     .form-container {
         padding: 24px;
@@ -1048,10 +1044,6 @@ svg {
     
     .nav-enlaces {
         margin-left: 16px;
-    }
-
-    ul {
-        gap: 16px;
     }
 
     .img-logo {
@@ -1148,4 +1140,4 @@ svg {
         max-width: max-content;
         font-size: 1em;
     }
-}
+} */
